...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Personal Expenses'),
        actions: [
          IconButton(
            key: const Key('addBtn'),
            onPressed: () => startAddNewTransaction(context),
            icon: const Icon(
              Icons.add,
            ),
          ),
        ],
...
